fix: transfers topic option from query to body
